Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-26121

[Note] InnoDB: Resetting invalid page [page id: space=5, page number=3] type 17855 to 6.

    XMLWordPrintable

Details

    Description

      SET sql_mode='',foreign_key_checks=0,unique_checks=0;
      SET GLOBAL innodb_checksum_algorithm=CRC32;
      SET SESSION AUTOCOMMIT=OFF;
      CREATE TABLE t (c INT) ENGINE=InnoDB;
      INSERT INTO t (c) VALUES (0);
      

      Leads to (error log):

      10.7.0 57f14eab20ae2733eb341f3d293515a10a40bc48 (Debug)

      2021-07-09 19:47:31 4 [Note] InnoDB: Resetting invalid page [page id: space=5, page number=3] type 17855 to 6.
      

      Happens on debug+optimized. 10.6/7 Only.

      Attachments

        Issue Links

          Activity

            People

              thiru Thirunarayanan Balathandayuthapani
              Roel Roel Van de Paar
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1d 2h 20m
                  1d 2h 20m

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.